--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,9 +6,9 @@ edition = "2021"
 [dependencies]
 async-std = "1.13.0"
 clap = { version = "4.5.20", features = ["derive"] }
-log = "0.4.22"
-pretty_env_logger = "0.5.0"
 reqwest = "0.12.8"
 serde = "1.0.210"
 tokio = { version = "1.40.0", features = ["full"] }
 tokio-postgres = "0.7.12"
+tracing = "0.1.41"
+tracing-subscriber = "0.3.19"
